--- a/src/App.css
+++ b/src/App.css
@@ -1,128 +1,8 @@
 @import "tailwindcss";
-/* 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
-}
 
-body, html {
-  margin: 0;
-  padding: 0;
+*{
   font-family: 'Roboto', sans-serif;
-}
-
-.layout {
-  display: flex;
-  height: calc(100vh - 50px);
-  width: 100%;
-  transition: all 0.3s ease-in-out;
-}
-
-
-.sidebar {
-  background-color: #333;
-  height: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  transition: width 0.5s ease;
-}
-
-.sidebar.closed {
-  width: 65px;
-  max-width: 65px;
-}
-
-.sidebar.open {
-  width: 65px;
-  max-width: 65px;
-}
-
-.toggle-button {
-  background-color: #333;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-  width: 100%;
-  outline: none;
-}
-
-
-.toggle-button svg {
-  border: none;
-  outline: none;
-  transition: transform 0.2s ease;
-}
-
-.toggle-button:hover svg {
-  transform: scale(1.1); 
-}
-
-
-.explorer {
-  background-color: #252526;
-  height: 100%;
-  width: 20%;
-  padding: 10px;
-  overflow-y: auto;
-  transition: all 0.3s ease-in-out;
-  display: flex;
-  flex-direction: column;
-}
-
-
-.main-content {
-  flex-grow: 1;
-  background-color: #222;
-  color: #fff;
-  padding: 20px;
-  overflow-y: auto;
-  transition: margin-left 0.3s ease;
-}
-
-
-.sidebar.open + .explorer + .main-content {
-  margin-left: 10px;
-}
-
-.sidebar.closed + .main-content {
-  margin-left: 60px;
-}
-
-
-@media (max-width: 768px) {
-  .layout {
-    flex-direction: column; 
-  }
-
-  .sidebar.open {
-    width: 200px; 
-  }
-
-  .explorer {
-    width: 100%;
-  }
-
-  .main-content {
-    margin-left: 0; 
-  }
-}
-
-.toggle-button:focus {
-  outline: none;
-  border-left: 3px solid white; 
-}
-
-.toggle-button svg {
-  outline: none;
-  border: none; 
-}
-
-.toggle-button:hover {
-
-  border-left: 3px solid white;
-} */
+ }
 
 /* General Layout */
 .layout {
@@ -175,7 +55,7 @@ body, html {
   background-color: #252526;
   height: 100%;
   width: 20%;
-  padding: 10px;
+  /* padding: 10px; */
   overflow-y: auto;
   transition: all 0.3s ease-in-out;
   display: flex;
