--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,4 +1,4 @@
-  footer {
+footer {
     background-color: #007acc;
     color: #d8d4d4;
     display: flex;
@@ -11,6 +11,7 @@
     width: 100%;
     height: 5px;
     font-family: Roboto, sans-serif;
+    box-sizing: border-box;
 }
 
 footer nav ul {
@@ -22,6 +23,9 @@ footer nav ul {
 
 footer nav ul li {
     margin-right: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 footer nav ul li a {
@@ -37,38 +41,30 @@ footer nav ul li a:hover {
     font-weight: 200;
     font-size: 12px;
 }
-
-.rightPart > li {
-    margin-right: 1.5rem;
+.hidden{
+    display: flex;
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
-    footer {
-        flex-direction: column;
-        height: auto;
-        padding: 10px 15px;
+    .hidden {
+        display: none;
     }
 
-    footer nav {
-        display: block;
+    footer {
+        justify-content: center; 
     }
 
     footer nav ul {
-        flex-direction: column;
-        margin-bottom: 10px;
+        justify-content: center;
+        flex-wrap: nowrap;
     }
 
     footer nav ul li {
-        margin-right: 0;
-        margin-bottom: 10px;
+        margin-right: 10px;
+        font-size: 10px;
     }
 
     .footerList {
-        font-size: 14px;
-    }
-
-    .rightPart {
-        text-align: center;
+        font-size: 11px;
     }
 }
