--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    /* padding: 1rem; */
     background-color: #222;
     color: white;
     box-sizing: border-box;
@@ -11,7 +11,7 @@
   .contact-form-wrapper {
     max-width: 800px;
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     background-color: #333;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
